[gd_scene load_steps=15 format=3 uid="uid://gp86wyj3lxh0"]

[ext_resource type="Script" path="res://hud.gd" id="1_4ghxe"]
[ext_resource type="Texture2D" uid="uid://c4u0ewpw206ly" path="res://Art/Title_screen.png" id="2_u4q7y"]
[ext_resource type="Texture2D" uid="uid://bctwbco3u3xeb" path="res://Art/Inventory_slot.png" id="3_kg8mr"]
[ext_resource type="Texture2D" uid="uid://csn2d8gp3tyus" path="res://Art/Cleaner_blue_cursor.png" id="4_mk7or"]
[ext_resource type="Texture2D" uid="uid://woro6odt7j6r" path="res://Art/Cleaner_red_cursor.png" id="5_4uwkr"]
[ext_resource type="Texture2D" uid="uid://doom6r43jhbug" path="res://Art/Diversey Small escape room-02.jpg" id="5_ge2js"]
[ext_resource type="Script" path="res://preview.gd" id="6_fpm2e"]

[sub_resource type="Theme" id="Theme_4dl75"]

[sub_resource type="Animation" id="Animation_xeoe8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m8thg"]
resource_name = "glow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.702423, 0.702422, 0.702422, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_07vx0"]
_data = {
"RESET": SubResource("Animation_xeoe8"),
"glow": SubResource("Animation_m8thg")
}

[sub_resource type="Animation" id="Animation_a2e1b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.702423, 0.702422, 0.702422, 1)]
}

[sub_resource type="Animation" id="Animation_piy15"]
resource_name = "return"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.702423, 0.702422, 0.702422, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3wfi1"]
_data = {
"RESET": SubResource("Animation_a2e1b"),
"return": SubResource("Animation_piy15")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_4ghxe")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(574, 327)
scale = Vector2(0.549524, 0.437333)
texture = ExtResource("2_u4q7y")

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -172.0
offset_top = 125.0
offset_right = 212.0
offset_bottom = 228.0
grow_horizontal = 2
pivot_offset = Vector2(192, 0)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 75
text = "Title"

[node name="ColorRect" type="ColorRect" parent="Title"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.341176, 0.498039, 1)

[node name="Start" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -31.5
offset_right = 51.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(51, 0)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Start_Button"

[node name="Difficulty" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = 59.0
offset_right = 93.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(91, 0)
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Difficulty_Button"
metadata/_edit_use_anchors_ = true

[node name="Instructions" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = 153.0
offset_right = 122.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(119, 0)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 39
text = "Instructions_Button"
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 73.0
offset_top = -106.0
offset_right = 183.0
offset_bottom = -43.0
grow_vertical = 0
pivot_offset = Vector2(50, 0)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Back_Button"

[node name="Bodytext" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 61.0
offset_top = -276.0
offset_right = 1083.0
offset_bottom = 200.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Body_Text"
autowrap_mode = 3

[node name="ColorRect" type="ColorRect" parent="Bodytext"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -15.0
offset_right = -24.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.02953, 1.05051)
color = Color(0.184314, 0.341176, 0.498039, 1)

[node name="Difficultytext" type="Label" parent="."]
offset_left = 59.0
offset_top = 53.0
offset_right = 1045.0
offset_bottom = 282.0
theme_override_font_sizes/font_size = 30
text = "Difficulty_Text"

[node name="ColorRect" type="ColorRect" parent="Difficultytext"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -18.0
offset_right = -19.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.341176, 0.498039, 1)

[node name="HideBacteria" type="CheckButton" parent="."]
offset_left = 316.0
offset_top = 281.0
offset_right = 511.0
offset_bottom = 313.0
scale = Vector2(2.79745, 2.83876)
text = "Hide_Bacteria_Text"

[node name="ColorRect" type="ColorRect" parent="HideBacteria"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.184314, 0.341176, 0.498039, 1)

[node name="LanguageSelect" type="ItemList" parent="."]
offset_left = 822.0
offset_top = 437.0
offset_right = 941.0
offset_bottom = 467.0
scale = Vector2(1.84644, 1.6154)
item_count = 2
item_0/text = "English (en)"
item_1/text = "Espa√±ol (es)"

[node name="LevelSelectBackground" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -4.0
offset_right = -3.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.01371, 1.00694)
mouse_filter = 2
color = Color(0.0904318, 0.458704, 0.52423, 1)

[node name="LevelSelectScroll" type="ScrollContainer" parent="LevelSelectBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -551.338
offset_top = -254.482
offset_right = 584.662
offset_bottom = 370.518
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.948667, 0.938263)
theme = SubResource("Theme_4dl75")

[node name="LevelSelectHolder" type="HBoxContainer" parent="LevelSelectBackground/LevelSelectScroll"]
layout_mode = 2

[node name="LevelSelect" type="TextureRect" parent="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 2
texture = ExtResource("3_kg8mr")
expand_mode = 1

[node name="ItemList" type="ItemList" parent="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -4.53171
offset_top = -191.334
offset_right = 223.468
offset_bottom = 238.666
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.09392, 1.12371)
item_count = 2
item_0/text = "Oxivir One Spray"
item_0/icon = ExtResource("4_mk7or")
item_1/text = "Crew Restroom Floor and Surface"
item_1/icon = ExtResource("5_4uwkr")

[node name="Preview1" type="TextureRect" parent="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect"]
modulate = Color(0.702423, 0.702422, 0.702422, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -276.0
offset_right = 1737.0
offset_bottom = 804.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.187331, 0.509317)
texture = ExtResource("5_ge2js")
script = ExtResource("6_fpm2e")

[node name="glow" type="AnimationPlayer" parent="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect/Preview1"]
libraries = {
"": SubResource("AnimationLibrary_07vx0")
}

[node name="return" type="AnimationPlayer" parent="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect/Preview1"]
libraries = {
"": SubResource("AnimationLibrary_3wfi1")
}

[node name="LinksLabel" type="Label" parent="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect"]
custom_minimum_size = Vector2(2, 2)
layout_mode = 0
offset_left = 437.779
offset_top = 41.2792
offset_right = 511.779
offset_bottom = 67.2792
scale = Vector2(1.78037, 1.40017)
text = "Links_text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="LevelSelectBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -555.284
offset_top = 6.95176
offset_right = 555.716
offset_bottom = 64.9518
grow_horizontal = 2
theme_override_font_sizes/font_size = 42
text = "Level_select_text"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Difficulty" to="." method="_on_difficulty_pressed"]
[connection signal="pressed" from="Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="gui_input" from="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect" to="." method="_on_level_select_gui_input"]
[connection signal="item_clicked" from="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="mouse_entered" from="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect/Preview1" to="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect/Preview1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect/Preview1" to="LevelSelectBackground/LevelSelectScroll/LevelSelectHolder/LevelSelect/Preview1" method="_on_mouse_exited"]
